k8s/components/speedtest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest-tracker
  namespace: speedtest
  labels:
    app.kubernetes.io/name: speedtest-tracker
    homelab/stack: speedtest
spec:
  selector:
    app: speedtest-tracker
  ports:
    - port: 80
      targetPort: 80
